[gd_scene load_steps=4 format=3 uid="uid://dg8le21xl6poj"]

[ext_resource type="Script" path="res://Scripts/MenuButton.gd" id="1"]
[ext_resource type="Theme" uid="uid://cruk118wm154o" path="res://Resources/Themes/Card_Text_54.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://dr3s0hnbndi57" path="res://Assets/UI/Menu_Hammer.png" id="3"]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(1820, 100)
offset_right = 1820.0
offset_bottom = 100.0
focus_mode = 1
script = ExtResource("1")
text = "New Game"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 4
mouse_filter = 2
theme = ExtResource("2")
bbcode_enabled = true
text = "[center] New Game [/center]"

[node name="LeftArrow" type="Sprite2D" parent="."]
position = Vector2(810, 33.3333)
texture = ExtResource("3")

[node name="RightArrow" type="Sprite2D" parent="."]
position = Vector2(1010, 33.3333)
texture = ExtResource("3")
flip_h = true

[connection signal="focus_entered" from="." to="." method="_On_TextureButton_Focus_Entered"]
[connection signal="focus_exited" from="." to="." method="_On_TextureButton_Focus_Exited"]
[connection signal="mouse_entered" from="." to="." method="_On_TextureButton_Mouse_Entered"]
